[gd_scene load_steps=17 format=2]

[ext_resource path="res://Graphics/Windowskins/battle 1.png" type="Texture" id=1]
[ext_resource path="res://Graphics/Pokemon/Front/YVELTAL.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Pokemon/Back/XERNEAS_1.png" type="Texture" id=3]
[ext_resource path="res://scripts/BattleScene.gd" type="Script" id=4]
[ext_resource path="res://Graphics/Battlebacks/cave1_bg.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Battlebacks/cave1_base1.png" type="Texture" id=6]
[ext_resource path="res://Fonts/power clear.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Fonts/power clear bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Graphics/Pictures/Battle/databox_hgss.png" type="Texture" id=9]
[ext_resource path="res://Fonts/hgss_health.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Fonts/HGSS_Font.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]
size = 20
extra_spacing_char = 1
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 18
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.882353, 0.882353, 0.882353, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=4]
size = 8
extra_spacing_top = 3
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=5]
size = 8
extra_spacing_bottom = 8
font_data = ExtResource( 11 )

[node name="BattleScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}
pokemon_1_data = {
"FORM_NUMBER": 1,
"ID": "RAPIDASH"
}
pokemon_2_data = {
"FORM_NUMBER": 0,
"ID": "PERRSERKER"
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 512.0
margin_bottom = 288.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Ground1" type="Sprite" parent="."]
position = Vector2( 145, 291 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite1" type="Sprite" parent="Ground1"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -48, -94 )

[node name="Ground2" type="Sprite" parent="."]
position = Vector2( 400, 148 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="Sprite" parent="Ground2"]
position = Vector2( -2, 6 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -48, -96 )

[node name="MessageBox" type="NinePatchRect" parent="."]
margin_top = 288.0
margin_right = 512.0
margin_bottom = 384.0
texture = ExtResource( 1 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Text" type="Label" parent="MessageBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 11.0
margin_right = -12.0
margin_bottom = -11.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.505882, 0.505882, 0.505882, 1 )
custom_constants/line_spacing = 10
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 1 )
text = "What will
%s do?"
valign = 1

[node name="Actions" type="GridContainer" parent="MessageBox"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -151.0
margin_top = 11.0
margin_right = -12.0
margin_bottom = -11.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 2

[node name="Fight" type="Button" parent="MessageBox/Actions"]
margin_right = 70.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "FIGHT"
flat = true

[node name="Pokemons" type="Button" parent="MessageBox/Actions"]
margin_left = 70.0
margin_right = 139.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "PKMNS"
flat = true

[node name="Bag" type="Button" parent="MessageBox/Actions"]
margin_top = 37.0
margin_right = 70.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "BAG"
flat = true

[node name="Run" type="Button" parent="MessageBox/Actions"]
margin_left = 70.0
margin_top = 37.0
margin_right = 139.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "RUN"
flat = true

[node name="Moves" type="GridContainer" parent="MessageBox"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -151.0
margin_top = 11.0
margin_right = -12.0
margin_bottom = -11.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 2

[node name="Move1" type="Button" parent="MessageBox/Moves"]
margin_right = 70.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "MOVE"
flat = true

[node name="Move2" type="Button" parent="MessageBox/Moves"]
margin_left = 70.0
margin_right = 139.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "MOVE"
flat = true

[node name="Move3" type="Button" parent="MessageBox/Moves"]
margin_top = 37.0
margin_right = 70.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "MOVE"
flat = true

[node name="Move4" type="Button" parent="MessageBox/Moves"]
margin_left = 70.0
margin_top = 37.0
margin_right = 139.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "MOVE"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="DataboxPokemon1" type="Sprite" parent="."]
position = Vector2( 384, 204 )
texture = ExtResource( 9 )
centered = false
region_enabled = true
region_rect = Rect2( 3, 34, 128, 47 )
__meta__ = {
"_edit_group_": true
}

[node name="HealthBar" type="Sprite" parent="DataboxPokemon1"]
position = Vector2( 72, 25 )
scale = Vector2( 16, 1 )
texture = ExtResource( 9 )
centered = false
region_enabled = true
region_rect = Rect2( 2, 13, 3, 3 )

[node name="Level" type="Label" parent="DataboxPokemon1"]
margin_left = 104.0
margin_top = 11.0
margin_right = 128.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.286275, 0.286275, 0.286275, 1 )
custom_colors/font_color_shadow = Color( 0.729412, 0.729412, 0.729412, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 4 )
text = "100"
valign = 1

[node name="HealthText" type="HBoxContainer" parent="DataboxPokemon1"]
margin_left = 61.0
margin_top = 31.0
margin_right = 123.0
margin_bottom = 42.0
alignment = 1

[node name="Label" type="Label" parent="DataboxPokemon1/HealthText"]
margin_right = 62.0
margin_bottom = 11.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.286275, 0.286275, 0.286275, 1 )
custom_colors/font_color_shadow = Color( 0.729412, 0.729412, 0.729412, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 4 )
text = "000/000"
align = 1
valign = 1

[node name="NameContainer" type="MarginContainer" parent="DataboxPokemon1"]
margin_left = 24.0
margin_top = 4.0
margin_right = 103.0
margin_bottom = 20.0
__meta__ = {
"_edit_group_": true
}

[node name="Name" type="Label" parent="DataboxPokemon1/NameContainer"]
margin_right = 79.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.286275, 0.286275, 0.286275, 1 )
custom_colors/font_color_shadow = Color( 0.729412, 0.729412, 0.729412, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 5 )
text = "Pokemon 1"
valign = 1

[node name="GenderSymbol" type="Sprite" parent="DataboxPokemon1"]
position = Vector2( 91, 14 )
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 2, 1, 8, 11 )

[node name="DataboxPokemon2" type="Sprite" parent="."]
position = Vector2( 0, 55 )
texture = ExtResource( 9 )
centered = false
region_enabled = true
region_rect = Rect2( 1, 82, 122, 35 )

[node name="HealthBar2" type="Sprite" parent="DataboxPokemon2"]
position = Vector2( 50, 24 )
scale = Vector2( 16, 1 )
texture = ExtResource( 9 )
centered = false
region_enabled = true
region_rect = Rect2( 2, 13, 3, 3 )

[node name="Level" type="Label" parent="DataboxPokemon2"]
margin_left = 82.0
margin_top = 10.0
margin_right = 106.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.286275, 0.286275, 0.286275, 1 )
custom_colors/font_color_shadow = Color( 0.729412, 0.729412, 0.729412, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 4 )
text = "100"
valign = 1

[node name="Level2" type="Label" parent="DataboxPokemon2"]
margin_left = 82.0
margin_top = 10.0
margin_right = 106.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.286275, 0.286275, 0.286275, 1 )
custom_colors/font_color_shadow = Color( 0.729412, 0.729412, 0.729412, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 4 )
text = "100"
valign = 1

[node name="NameContainer" type="MarginContainer" parent="DataboxPokemon2"]
margin_left = 2.0
margin_top = 3.0
margin_right = 81.0
margin_bottom = 19.0
__meta__ = {
"_edit_group_": true
}

[node name="Name" type="Label" parent="DataboxPokemon2/NameContainer"]
margin_left = 2.0
margin_right = 79.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.286275, 0.286275, 0.286275, 1 )
custom_colors/font_color_shadow = Color( 0.729412, 0.729412, 0.729412, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 5 )
text = "Pokemon 2"
valign = 1

[node name="GenderSymbol" type="Sprite" parent="DataboxPokemon2"]
position = Vector2( 69, 13 )
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 2, 1, 8, 11 )
